# masters_project

./: .gitignore  main.py  main2.py  progress_state.json  pyproject.toml  temp.py  יצירת W2V הומוגרפי.docx
bert2vec/: __init__.py  example.py  examples.ipynb
bert2vec/data_process/: bm_25.py  data_process.py  tf_idf.py
bert2vec/model/: Model.py  Row.py
src/: __init__.py  bert_2_vec_model.py  compact_bert2vec_model.py  config.py  data_models.py  main.py  model_manager.py  train_word2vec.py  word2vec_config.py
src/models/: __init__.py  token.py
src/utils/: misc_utils.py  model_worker.py  models_utils.py  parallel_run.py  parsing_utils.py  sqlite_pickle_streamer.py  sqlite_sentence_streamer.py  tf_utils.py  tokenization_utils.py  write_behind_shelve.py
