[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nltk~=3.8",
    "numpy~=1.23",
    "pandas~=1.5",
    "scikit-learn~=1.2",
    "torch~=2.6.0",
    "tqdm~=4.64",
    "transformers~=4.30",
]
