[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets~=3.6",
    "nltk~=3.8",
    "numpy~=1.23",
    "pandas~=1.5",
    "pydantic>=2.11.7",
    "python-docx>=1.2.0",
    "scikit-learn~=1.2",
    "torch~=2.6.0",
    "tqdm~=4.64",
    "transformers~=4.30",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
